syntax = "proto3";
package view;
import "layout.proto";
import "paint.proto";
import "google/protobuf/any.proto";

option go_package = "pb";
option objc_class_prefix = "MochiPB";

message Node {
  int64 id = 1;
  int64 buildId = 2;
  int64 layoutId = 3;
  int64 paintId = 4;
  string bridgeName = 7;
  google.protobuf.Any bridgeValue = 8;
  repeated Node children = 5;
  layout.Guide layoutGuide = 6;
  paint.PaintStyle paintStyle = 9;
}

message Root {
  Node node = 1;
}
